force-app/main/default/objects/PO_Item_Component__c/PO_Item_Component__c.object-meta.xml
<CustomObject>
    <label>PO Item Component</label>
    <nameField>
        <label>PO Item Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO_Item_Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>