force-app/main/default/objects/PO_Item_Component__c/fields/Buyer_Component_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Component_Number__c</fullName>
    <label>Buyer Component Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>