force-app/main/default/objects/PO_Item_Component__c/fields/Component_Price__c.field-meta.xml
<CustomField>
    <fullName>Component_Price__c</fullName>
    <label>Component Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>