force-app/main/default/objects/PO_Item_Component__c/fields/PO_Item_Stage__c.field-meta.xml
<CustomField>
    <fullName>PO_Item_Stage__c</fullName>
    <label>PO Item Stage</label>
    <referenceTo>PO_Item_Stage__c</referenceTo>
    <relationshipLabel>PO_Item_Component</relationshipLabel>
    <relationshipName>PO_Item_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>