force-app/main/default/objects/PO_Item_Component__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <type>TextArea</type>
</CustomField>