force-app/main/default/objects/PO_Item_Component__c/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <label>Sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>